Thu Dec  3 23:03:15 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* configure.in: Check for getopt.h for those platforms that don't
	have it. Fix checks for db and rx dirs since these names won't
	change.

	* include/htconfig.h.in: Define HAVE_GETOPT_H.
	
	* configure: Generate from configure.in with latest autoconf
	(2.12.2).

	* htdig/Plaintext.cc: Removed compiler warnings.

	* htdig/main.cc, htfuzzy/htfuzzy.cc, htmerge/htmerge.cc,
	htnotify/htnotify.cc, htsearch/htsearch.cc: Use configure check to
	only include getopt.h when it exists.

	* htcommon/defaults.cc: Add new option "http_proxy_exclude" for
	servers that shouldn't use the proxy, from a patch by Gilles
	Detillieux.

	* htdig/Document.h, htdig/Document.cc: Use it, from a patch by Gilles.

Tue Dec  1 21:36:37 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* Makefile.in: Fixed bug with "make depend," noted by Morgan Davis
	<mdavis@cts.com>.

	* htdig/main.cc, htfuzzy/htfuzzy.cc, htmerge/htmerge.cc,
	htnotify/htnotify.cc, htsearch/htsearch.cc: Add include <getopt.h>
	to help compiling under Win32 with CygWinB20.

	* htdig/Retriever.cc: Update hopcount correctly by taking the
	shortest paths to documents.

	* htlib/DB2_db.cc: Added fix from Alexander Bergolth for Berkeley
	DB under AIX.

	* htlib/StringMatch.cc: Added fix from Christian Schneider
	<cschneid@relog.ch>, discovered from behavior with limit_urls_to.

Sun Nov 29 21:26:56 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc: Fix last update so it compiles (oops!).

	* htdig/Document.cc: As above!

Sun Nov 29 20:06:58 1998  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/htsearch.cc: Improved support for multiple restrict and
	exclude patterns, based on code from Gilles Detillieux
	and William Rhee <willrhee@umich.edu>.

	* htdig/Document.cc, htdig/PDF.cc: Fixed problems under FreeBSD
	where <sys/types.h> needed to be before <sys/stat.h>, noted by
	Gilles.
